--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,21 +1,11 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="cs">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Náramková Móda</title>
+    <title>Dev Chat Widget</title>
   </head>
   <body>
     <div id="root"></div>
-
-    <!-- 🟩 1) Tvůj React frontend -->
     <script type="module" src="/src/main.jsx"></script>
-
-    <!-- 🟨 2) Chatbot widget (buildnutý React widget jako JS) -->
-    <script src="/chat-widget.js" defer></script>
-
-    <!-- 🟦 3) Init script pro spuštění widgetu -->
-    <script src="/init-chat-widget.js" defer></script>
   </body>
 </html>
