--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,9 +2,13 @@
 <html lang="cs">
   <head>
     <meta charset="UTF-8" />
-    <title>💬 Chatbot Widget – Demo</title>
+    <title>✅ Widget je nahraný!</title>
   </head>
   <body>
+    <h1>✅ Widget je nahraný!</h1>
     <script src="./chat-widget.js"></script>
+    <script>
+      window.ChatbotWidget?.init?.();
+    </script>
   </body>
 </html>
